# xenowar

./: .cproject  .gitignore  .project  CMakeLists.txt  bar-descriptor.xml
BlackBerry/: .cproject  .gitignore  .project  bar-descriptor.xml
BlackBerry/bb/: BBXMain.cpp  BBXUtil.h
BlackBerry/playbook/: Sound.cpp  Sound.h
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/drodin/xenowar/: MySDLActivity.java
android/app/src/main/jni/: app-android.c
android/app/src/main/res/values/: ic_launcher_background.xml
apple/ios/: LaunchScreen.storyboard
cmake/Hunter/: config.cmake
cmake/template/: toolchain.cmake.in
engine/: engine.cpp  gpustatemanager.cpp  loosequadtree.cpp  map.cpp  map.h  platformgl.h  settings.cpp  settings.h  texture.cpp  uirendering.cpp
game/: battledata.cpp  battlescene.cpp  buildbasescene.cpp  cgame.cpp  cgame.h  chits.h  dialogscene.cpp  game.cpp  game.h  gamesettings.cpp  geomap.cpp  geoscene.cpp  helpscene.cpp  inventory.cpp  inventory.h  item.cpp  item.h  newtacticaloptions.cpp  research.cpp  research.h  saveloadscene.cpp  scene.h  settingscene.cpp  stats.cpp  stats.h  tacmap.cpp  tacmap.h  tacticalintroscene.cpp  tacticalintroscene.h  ufosound.cpp  unit.cpp  unit.h
gamui/: gamui.h  gamuitest.cpp
grinliz/: glbitarray.h  gldynamic.cpp  glgeometry.cpp  glgeometry.h  glrectangle.h  gltypes.h
micropather/: micropather.h
playbook/: BBXMain.cpp  BBXUtil.cpp  bbutil.c  bbutil.h  main.cpp  main.h
resin/: default.xml
sdl/: audio.cpp  main.cpp
shared/: gamedbreader.cpp  gamedbreader.h  gamedbwriter.cpp  gldatabase.cpp  gldatabase.h  glmap.h
ufobuilder/: builder.cpp
win32/: framebuffer.cpp  main.cpp
